--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ go:
 addons:
   postgresql: "9.3"
 
+env:
+  global:
+    - ORACLE_FILE=oracle-xe-11.2.0-1.0.x86_64.rpm.zip
+    - ORACLE_HOME=/u01/app/oracle/product/11.2.0/xe
+    - ORACLE_SID=XE
+
 before_install:
   - go get github.com/jteeuwen/go-bindata/...
   - go get github.com/stretchr/testify/assert
@@ -15,9 +21,7 @@ before_install:
   - go get github.com/go-sql-driver/mysql
   - go get github.com/lib/pq
   - go get github.com/0x6e6562/gosnow
-  - . /usr/lib/oracle/xe/app/oracle/product/10.2.0/server/bin/oracle_env.sh
-  - echo "ORACLE_HOME=${ORACLE_HOME}"
-  - echo "ORACLE_SID=${ORACLE_SID}"
+  - download_oracle.sh
   - go get github.com/mattn/go-oci8
   - export PATH=$HOME/gopath/bin:$PATH
   - mysql -e "CREATE DATABASE sqlc;"
