--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,8 @@ before_install:
   - sudo find / -name "include"
   - LD_LIBRARY_PATH=/u01/app/oracle/product/11.2.0/xe/lib/:$LD_LIBRARY_PATH
   - echo $LD_LIBRARY_PATH
+  - LD_RUN_PATH=/u01/app/oracle/product/11.2.0/xe/lib/:$LD_RUN_PATH
+  - echo $LD_RUN_PATH
   - go get github.com/mattn/go-oci8
   - export PATH=$HOME/gopath/bin:$PATH
   - mysql -e "CREATE DATABASE sqlc;"
